# gsg_numeric-sequences-haskell

./: .gitignore  numeric-sequences-haskell.cabal
src/: Main.hs
src/Interface/: ArGeo.hs  General.hs  Sequence.hs  Special.hs  Top.hs
src/Sequences/: Arithmetic.hs  Arithmetric.hs  General.hs  Geometric.hs  Special.hs
